--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/yaml": "6.0.*"
     },
     "require-dev": {
+        "phpmd/phpmd": "^2.12",
         "phpspec/prophecy-phpunit": "^2.0",
         "phpstan/phpstan-symfony": "^1.1",
         "phpunit/phpunit": "^9.5",
