--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "phpspec/prophecy-phpunit": "^2.0",
         "phpstan/phpstan-symfony": "^1.1",
         "phpunit/phpunit": "^9.5",
+        "squizlabs/php_codesniffer": "^3.7",
         "symfony/browser-kit": "6.0.*",
         "symfony/css-selector": "6.0.*",
         "symfony/phpunit-bridge": "^6.0"
@@ -63,6 +64,20 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "cs-check": "phpcs",
+        "cs-fix": "phpcbf",
+        "serve": "php -S 0.0.0.0:8080 -t public/",
+        "test": "phpunit --colors=always",
+        "test-coverage": "phpunit --colors=always --coverage-clover clover.xml",
+        "phpcs": "phpcs src/",
+        "phpmd": "phpmd src/ ansi \"cleancode,codesize,controversial,design,naming,unusedcode\"",
+        "phpstan": "php vendor/bin/phpstan analyse -c phpstan.neon",
+        "all-cq-checks": [
+            "@test",
+            "@phpcs",
+            "@phpmd",
+            "@phpstan"
         ]
     },
     "conflict": {
