--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,8 @@
     "license": "proprietary",
     "minimum-stability": "stable",
     "prefer-stable": true,
+    "name": "joefox/symfony-test",
+    "description": "A test application to evaluate Symfony as a framework",
     "require": {
         "php": ">=8.0.2",
         "ext-ctype": "*",
